# webhash-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.docs/: security_code_review.md
.github/workflows/: ci.yml
src/: main.py
src/webhash_monitor/: WebhashMonitor.py  __init__.py  callbacks.py  config.yaml  main.py
src/webhasher-monitor/: config.yaml  main.py
tests/: conftest.py  test_basic.py  test_sec.py
