[project]
name = "webhash-monitor"
version = "1.6.0"
description = "A secure, lightweight webpage change detection tool using SHA256 hashing."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "NenshaM"}
]
keywords = ["monitoring", "web", "SHA256", "hashing", "webhash"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["build/", "dist/", ".venv/", "__pycache__/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
    "C4", # comprehensions
    "UP", # pyupgrade
]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]